apps/golist-db/golist-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
    tier: database
  name: golist-db-mysql
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      tier: database
  strategy: {}
  template:
    metadata:
      labels:
        app: mysql
        tier: database
    spec:
      containers:
      - image: mysql:5.6.51
        name: mysql
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-db
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 150
          periodSeconds: 30
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 150
          periodSeconds: 30
      volumes:
      - name: mysql-db
        persistentVolumeClaim:
          claimName: golist-db-pvc
