apps/golist-db/golist-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
    tier: database
  name: golist-db-mysql
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
    tier: database
status:
  loadBalancer: {}
